Refactor ApiError and VehicleService; remove unused constructors, improve error messages, and simplify stream operations